# knife

./: CHANGELOG  README  build.xml  build.xml~  pom.xml
agent/: .classpath  .project
client/: .classpath  .project
core/: .classpath  .project
lib/: .project
native/: .cproject  .project  config.h  config.status  configure  configure.scan  libtool  pom.xml
native/src/: #nativehelper.cpp#  Makefile  Makefile.am  Makefile.in  agent.cpp  agent.h  agent.lo  api.h  check.c  class.c  field.c  libagent.la  nativehelper.cpp  nativehelper.cpp~  nativehelper.h  nativehelper.h~  nativehelper.lo  reference.c  test.c  trace.c  util.c  util.h
native/src/.deps/: nativehelper.Plo
native/src/.libs/: libnativehelper.so.0.0.0
native_bak/: .cproject  .project  Makefile  config.status  configure.ac
native_bak/Default/src/: class.d  field.d  reference.d  trace.d
native_bak/autom4te.cache/: output.1  output.5  requests  traces.0  traces.5
native_bak/src/: Makefile.am  check.c  class.c  field.c  nativehelper.h  reference.c  trace.c  util.c
native_bak/src/.libs/: libnativehelper.la  libnativehelper.so.0.0.0
rpm/: rpm.spec  rpm.spec~
server/: .classpath  .project
shell/: knife.bat  knife.bat~  knife.sh  knife.sh~  proxy.bat  (+3 more)
src/main/cpp/: Makefile  Makefile.in  configure.ac  libtool
src/main/cpp/autom4te.cache/: traces.1
src/main/cpp/src/: Makefile  Makefile.in  libnativehelper.la  nativehelper.cpp  nativehelper.cpp~
src/main/cpp/src/.deps/: agent.Plo
src/main/cpp/src/.libs/: libagent.la  libagent.lai  libagent.so.0.0.0  libnativehelper.lai  libnativehelper.so.0
(+1513 files in other folders)
