INCLUDES=-I/home/chenjw/software/jdk1.6.0_29/include -I/home/chenjw/software/jdk1.6.0_29/include/linux
AUTOMAKE_OPTIONS=foreign
lib_LTLIBRARIES=libagent.la libnativehelper.la
libagent_la_SOURCES=agent.cpp agent.h
libnativehelper_la_SOURCES=nativehelper.cpp nativehelper.h agent.h
include_HEADERS=agent.h 
