#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT(agent, 0.0.1, cjw1983@gmail.com)
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([src/agent.cpp])
AC_CONFIG_HEADERS([config.h])
# Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_LIBTOOL
# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_SUBDIRS([src])
AC_OUTPUT([Makefile src/Makefile])
